loan-calculator-app/loan-calculator-backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loan-calculator-backend
spec:
  selector:
    matchLabels:
      app: loan-calculator-backend
  replicas: 3
  template:
    metadata:
      labels:
        app: loan-calculator-backend
    spec:
      containers:
      - name: loan-calculator-backend
        image: daszkiewiczk/loan-calculator-backend:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 8080
