loan-calculator-app/loan-calculator-backend/backend-service.yaml
apiVersion: v1
kind: Service 
metadata:
  name: loan-calculator-backend-service
spec:
  selector:
    app: loan-calculator-backend 
  ports:
  - protocol: "TCP"
    port: 8080
    targetPort: 8080
