loan-calculator-app/loan-calculator-backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: loan-calculator-ingress
spec:
  ingressClassName: kong
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: /api
        backend:
          service:
            name: loan-calculator-backend-service
            port:
              number: 8080
      - pathType: Prefix
        path: /
        backend:
          service:
            name: loan-calculator-frontend
            port:
              number: 3000
